Comienzo de Persistencia + Correccion de Errores